[+] API Register
